# lsp-fuzz

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .tokeignore  AGENTS.md  CITATION.cff  Cargo.toml  LICENSE  README.md  codebook.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
.zed/: tasks.json
crates/lsp-fuzz/: Cargo.toml
crates/lsp-fuzz-cli/: Cargo.toml
crates/lsp-fuzz-cli/src/: fuzzing.rs  language_fragments.rs  main.rs
crates/lsp-fuzz-cli/src/cli/: baseline.rs  corpus_coverage.rs  export.rs  fuzz.rs  mine_code_fragments.rs  mine_grammar_fragments.rs  minimize.rs  mod.rs  reproduce.rs  triage.rs
crates/lsp-fuzz-cli/src/cli/baseline/: binary.rs  mod.rs  nautilus.rs  two_dim.rs
crates/lsp-fuzz-cli/src/cli/fuzz/: minimize.rs  mod.rs
crates/lsp-fuzz-cli/src/cli/reproduce/: mod.rs  reproduce_all.rs  reproduce_baseline.rs  reproduce_one.rs
crates/lsp-fuzz-cli/src/fuzzing/: common.rs
crates/lsp-fuzz-grammars/: Cargo.toml
crates/lsp-fuzz-grammars/src/: data.rs  language.rs  language_data.rs  lib.rs
crates/lsp-fuzz/src/: afl.rs  corpus.rs  debug.rs  file_system.rs  fuzz_target.rs  lib.rs  lsp.rs  macros.rs  mutators.rs  utils.rs
crates/lsp-fuzz/src/baseline/: mod.rs  two_dim.rs
crates/lsp-fuzz/src/coverage/: mod.rs
crates/lsp-fuzz/src/execution/: fork_server.rs  mod.rs  responses.rs  sanitizers.rs  test.rs  workspace_observer.rs
crates/lsp-fuzz/src/generator/: mod.rs
crates/lsp-fuzz/src/inputs/: file_system.rs  lsp.rs  mod.rs  path_segment.rs
crates/lsp-fuzz/src/lsp/: capabilities.rs  capatibilities.rs  code_context.rs  compositions.rs  generation.rs  generator.rs  json_rpc.rs  message.rs  mod.rs  ucc.rs  workspace_localization.rs
crates/lsp-fuzz/src/lsp/compositions/: diagnostics.rs  formatting.rs  hierarchy.rs  mod.rs  navigation.rs  symbols.rs  tracing_misc.rs  workspace.rs
crates/lsp-fuzz/src/lsp/generation/: composition.rs  consts.rs  containers.rs  defaults.rs  doc.rs  doc_range.rs  meta.rs  mod.rs  numeric.rs  position.rs  position_selectors.rs  server_feedback.rs  string.rs
crates/lsp-fuzz/src/lsp/generation/core/: combinators.rs  composition.rs  consts.rs  mod.rs  registry.rs
crates/lsp-fuzz/src/lsp/generation/doc_range/: mod.rs  range_selectors.rs
crates/lsp-fuzz/src/lsp/generation/registration/: diagnostics.rs  formatting.rs  hierarchy.rs  mod.rs  navigation.rs  symbols.rs  tracing_misc.rs  workspace.rs
crates/lsp-fuzz/src/lsp/metamodel/: grammar.rs  mod.rs
crates/lsp-fuzz/src/lsp_input/: message_edit.rs  messages.rs  mod.rs  ops_curiosity.rs  output_novelty.rs  server_response.rs  session.rs  uri.rs
crates/lsp-fuzz/src/lsp_input/server_response/: collector.rs  matching.rs  metadata.rs
crates/lsp-fuzz/src/muation/: mod.rs  path_segment.rs
crates/lsp-fuzz/src/stages/: cleanup.rs  mod.rs  stats.rs  stop.rs
crates/lsp-fuzz/src/stolen/: mod.rs  tree_sitter_generate.rs
crates/lsp-fuzz/src/stolen/upstream/: mod.rs
crates/lsp-fuzz/src/stolen/upstream/tree_sitter_generate/: README.md  grammars.rs  mod.rs  nfa.rs  parse_grammar.rs  rules.rs
crates/lsp-fuzz/src/stolen/upstream/tree_sitter_generate/prepare_grammar/: expand_repeats.rs  expand_tokens.rs  extract_default_aliases.rs  extract_tokens.rs  flatten_grammar.rs  intern_symbols.rs  mod.rs  process_inlines.rs
crates/lsp-fuzz/src/syneax/: mod.rs
crates/lsp-fuzz/src/text_document/: generation.rs  langauge.rs  language.rs  mod.rs  mutations.rs  token_novelty.rs
crates/lsp-fuzz/src/text_document/grammar/: fragment_extraction.rs  mod.rs  tree_sitter.rs
crates/lsp-fuzz/src/text_document/grammars/: fragment_extraction.rs  mod.rs  tree.rs
crates/lsp-fuzz/src/text_document/grammars/tree_sitter/: cpp.json
crates/lsp-fuzz/src/text_document/mutations/: core.rs  mod.rs  node_filters.rs  node_generators.rs  text_document_selectors.rs
crates/lsp-fuzz/src/utf8/: mod.rs  mutators.rs
