[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
ahash = { version = "0.8.12" }
anyhow = { version = "1.0.100", features = ["backtrace"] }
bitflags = "2.10.0"
clap = { version = "4.5.50", features = ["derive", "color", "env", "unicode"] }
const-str = "0.7.0"
ctrlc = "3.5"
derive-new = "0.7.0"
derive_more = { version = "2.0.1", features = ["full"] }
fastbloom = { version = "0.14.0", features = ["serde"] }
indexmap = { version = "2.12.0", features = ["serde"] }
itertools = "0.*"
lcov = "0.8.1"
libafl = { version = "0.15.4", features = [ "errors_backtrace", "casr", "nautilus", ] }
libafl_bolts = { version = "0.15.4" }
libcasr = { version = "2", features = ["serde"] }
lsp-types = { git = "https://github.com/henryhchchc/lsp-types.git", branch = "dev", features = [ "hash", ] }
memmap2 = "0.9.9"
nix = { version = "0.30.1", features = ["resource", "signal", "poll", "fs"] }
num_cpus = "1.17.0"
ordermap = { version = "1.0.0", features = ["serde"] }
os_pipe = "1.2.3"
rayon = "1.11.0"
serde = "1.0.228"
serde_cbor = "0.11.2"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
smallbitvec = "2.6.0"
smallvec = { version = "1.15.1", features = ["const_generics"] }
static_assertions = "1.1.0"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0"
tokio-util = { version = "0", features = ["full"] }
tracing = "0.1.41"
tree-sitter = { version = "0.25.10" }
tuple_list = "0.1.3"
zstd = { version = "0.13.3", features = ["zstdmt"], default-features = false }

[patch.crates-io]
# Keep this until the following PRs has been released
# - https://github.com/AFLplusplus/LibAFL/pull/3436
# - https://github.com/AFLplusplus/LibAFL/pull/3408
libafl = { git = "https://github.com/AFLPlusPlus/LibAFL.git",  rev = "f688ae75499cbd4d4907bd0a07f5124ff00b4bba" }
libafl_bolts = { git = "https://github.com/AFLPlusPlus/LibAFL.git",  rev = "f688ae75499cbd4d4907bd0a07f5124ff00b4bba" }

[profile.release]
debug = true
opt-level = 3
lto = true
