[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
ahash = { version = "0.8" }
anyhow = { version = "1.0", features = ["backtrace"] }
bitflags = "2.10"
ciborium = "0.2"
clap = { version = "4.5", features = ["color", "derive", "env", "unicode"] }
const-str = "1.0"
ctrlc = "3.5"
derive_more = { version = "2.1", features = ["full"] }
derive-new = "0.7"
fastbloom = { version = "0.14", features = ["serde"] }
indexmap = { version = "2.12", features = ["serde"] }
itertools = "0.*"
libafl = { version = "0.15", features = [
  "casr",
  "errors_backtrace",
  "nautilus",
] }
libafl_bolts = { version = "0.15" }
libcasr = { version = "2", features = ["serde"] }
lsp-types = { version = "0.97", features = ["hash"] }
memmap2 = "0.9"
nix = { version = "0.31", features = ["fs", "poll", "resource", "signal"] }
num_cpus = "1.17"
ordermap = { version = "1.1", features = ["serde"] }
os_pipe = "1.2"
rayon = "1.11"
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
smallbitvec = "2.6"
smallvec = { version = "1.15", features = ["const_generics"] }
static_assertions = "1.1"
tempfile = "3.24"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0"
tokio-util = { version = "0", features = ["full"] }
tracing = "0.1"
tree-sitter = { version = "0.26" }
tuple_list = "0.1"
zstd = { version = "0.13", default-features = false, features = ["zstdmt"] }

[patch.crates-io]
# This is a custom version with tweaks required by lsp-fuzz
lsp-types = { git = "https://github.com/henryhchchc/lsp-types.git", rev = "00b517e1936150cd8ab7a02aeb602c2a5fe66a46" }

[profile.release]
opt-level = 3
debug = true
lto = true
codegen-units = 1
