[package]
name = "lsp-fuzz"
edition.workspace = true
version.workspace = true

[dependencies]
ahash.workspace = true
anyhow.workspace = true
bitflags.workspace = true
clap.workspace = true
const-str.workspace = true
derive-new.workspace = true
derive_more.workspace = true
dot-structures = "0.1.1"
fluent-uri = "0.3"
graphviz-rust = { version = "0.9.3", default-features = false }
indexmap.workspace = true
itertools.workspace = true
kmp = "0.1"
libafl.workspace = true
libafl_bolts.workspace = true
libc = "0.2"
lsp-types.workspace = true
memmap2.workspace = true
nix.workspace = true
ordermap.workspace = true
os_pipe = "1.2.1"
regex-syntax = "0.8.5"
serde = "1"
serde_cbor.workspace = true
serde_json.workspace = true
static_assertions.workspace = true
thiserror.workspace = true
tracing.workspace = true
trait-gen = "0.3.2"
tree-sitter = { version = "0.25" }
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-toml-ng.workspace = true
tuple_list.workspace = true
zstd.workspace = true

[features]
profiling = ["libafl/introspection"]
